--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "dev": "tsup --watch",
     "build": "tsup",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
